--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "faker": "^4.1.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
