--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "chalk": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
